docs/tests/parser/control_flow/invalid/SwitchCaseMissingBody.b
fn void test() {
    switch (x) {
        case 1;
    }
}
